refactor: comprehensive frontend overhaul and project finalization